Bug 399294 - [Maxima] Evaluating the work sheet breaks on the first conversion
Summary: [Maxima] Evaluating the work sheet breaks on the first conversion
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: maxima-backend (other bugs)
Version First Reported In: 18.08
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-01 22:07 UTC by Albert Astals Cid
Modified: 2018-11-20 12:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2018-10-01 22:07:09 UTC
Cantor 18.08.1

STEPS TO REPRODUCE
1. open cantor
2. open the maxima tutorial for beginners file
3. Press evaluate the work sheet

OBSERVED RESULT

The evaluation doesn't get past the first operation (9+7), sometimes it gives "T" as output and sometimes it's empty.

I have the feeling it may be the latex conversion script failing/hanging?

SOFTWARE VERSIONS
Qt Version: 5.11.2

ADDITIONAL INFORMATION
Maxima 5.41.0
Comment 1 Nikita Sirgienko 2018-10-02 20:38:45 UTC
About 'T': I don't know that is it, but I sometiems (rarely) found 'T' not only in Cantor, but in maxima cli too.
So, that you reproduced this problem - good news for me, I now know, that this is real problem.
Comment 2 Nikita Sirgienko 2018-11-18 17:32:47 UTC
I have found a cause of the problem. Thanks, Albert, your hypothesis was very helpfull.
Comment 3 Nikita Sirgienko 2018-11-20 12:48:08 UTC
Git commit 35c3e15d6c3c0faeb867d4b2f14a36025f4bc450 by Nikita Sirgienko.
Committed on 20/11/2018 at 12:44.
Pushed by sirgienko into branch 'master'.

Fix bug, when "T" and "NIL" sometimes appearing in output
FIXED-IN: 18.12

M  +9    -2    src/backends/maxima/maximasession.cpp

https://commits.kde.org/cantor/35c3e15d6c3c0faeb867d4b2f14a36025f4bc450
Comment 4 Nikita Sirgienko 2018-11-20 12:48:59 UTC
Git commit 01261aff0ea86a9350e7a2f61a9aca38ffa8f434 by Nikita Sirgienko.
Committed on 20/11/2018 at 12:47.
Pushed by sirgienko into branch 'Applications/18.12'.

Fix bug, when "T" and "NIL" sometimes appearing in output
FIXED-IN: 18.12
(cherry picked from commit 35c3e15d6c3c0faeb867d4b2f14a36025f4bc450)

M  +9    -2    src/backends/maxima/maximasession.cpp

https://commits.kde.org/cantor/01261aff0ea86a9350e7a2f61a9aca38ffa8f434