Fix bug, when "T" and "NIL" sometimes appearing in output

BUG: 399294
FIXED-IN: 18.12
(cherry picked from commit 35c3e15d6c3c0faeb867d4b2f14a36025f4bc450)